# PointCloudRendering

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  conan_run.bat  conanfile.txt  pyproject.toml
shaders/: splat_attributes.frag
src/: Camera.cpp  Camera.h  GUI.cpp  GUI.h  InputManager.cpp  InputManager.h  PointCloudAggregator.cpp  PointCloudAggregator.h  PointCloudScene.cpp  PointCloudScene.h  Renderer.cpp  Renderer.h  RenderingParameters.h  Shader.h  Window.cpp  Window.h  main.cpp  stdafx.h
src/interface/fonts/: font_awesome.hpp  lato.cpp
src/interface/imgui-impl/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/loaders/: PLYLoader.cpp  PLYLoader.h
src/model/: AABB.cpp  AABB.h  Octree.cpp  Octree.h  PointCloud.h  PointModel.cpp  PointModel.h
src/utilities/: HelperVec3.h  Singleton.h
